Fix spacing issues on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     font-family: Inter, sans-serif;
     font-weight: 300;
     color: #56423D;
-    background-color: #87957C;
+    background-color: #B2BBAF;
 }
 
 a {
@@ -155,7 +155,7 @@ ul {
 .cover-text {
     text-align: left;
     padding: 0;
-    background-color: #87957C;
+    background-color: #B2BBAF;
     color: #3B3D22;
     height: 100%;
     width: 40%;
@@ -208,16 +208,16 @@ ul {
 .happy-heading {
     background-color: #F2CDC3;
     padding-top: 1.5%;
-    padding-left: 1%;  
+    padding-left: 2%;  
+    margin-top: 1%;
 }
 
 .happy-heading>h2 {
     text-transform: uppercase;
-    color: #87957C;
+    color: #56423D;
     letter-spacing: 0.34em;
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 700;
-    margin-left: 1%;
 }
 
 .happy-stories {
@@ -230,19 +230,19 @@ ul {
     width: 60%;
     padding-top: 1.5%;
     object-fit: cover;
-    margin-left: 30px;
+    margin-left: 2%;
 }
 
 .happy-text {
     text-align: left;
     background-color: #F2CDC3;
-    color: #56423D;
+    color: #4B3A35;
     height: 40%;
     width: 40%;
     font-style: italic;
     font-weight: 600;
     margin-top: 1.5%;
-    margin-right: 1%;
+    margin-right: 2%;
     background-color:#BEA6A0;
 }
 
@@ -271,9 +271,24 @@ ul {
     display: flex;
 }
 
+.about-heading {
+    background-color: #F2CDC3;
+    padding-top: 1.5%;
+    padding-left: 2%;
+    margin-top: 1%;
+}
+
+.about-heading>h2 {
+    text-transform: uppercase;
+    color: #56423D;
+    letter-spacing: 0.34em;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
 .about-us-text {
     text-align: left;
-    background-color: #87957C;
+    background-color: #B2BBAF;
     color: #3B3D22;
     height: 100%;
     width: fit-content;
@@ -285,15 +300,14 @@ ul {
     letter-spacing: 0.34em;
     font-size: 20px;
     font-weight: 700;
-    margin-left: 2.5%;
-    margin-top: 2%;
+    padding-left: 4%;
 } 
 
 .about-us-text>p {
     font-weight: 600;
     font-size: 18px;
     color: #56423D;
-    margin: 2% 2.5%;
+    padding-left: 4%;
 }
 
 .second-paragraph {
@@ -317,8 +331,8 @@ ul {
 }
 
 .about-us-img {
-    text-align: right;
     object-fit: cover;
+    margin: 0 0.5%;
 }
 
 .about-us-img>img {
@@ -390,7 +404,7 @@ ul {
     max-width: 100%;
     justify-content: center;
     padding: 3%; 
-    background-color: #87957C;
+    background-color: #B2BBAF;
     display: flex;
     flex-wrap: wrap;
 }
@@ -432,16 +446,18 @@ ul {
 .backcolor-text>h3 {
     font-size: 20px;
     color: #87957C;
+    padding: 2%;
 }
 
 .backcolor-text>p {
     font-size: 1rem;
-    color: #56423D;
+    color: #4B3A35;
     font-weight: 600;
+    padding: 2%;
 }
 
 .backcolor-text:hover {
-    background-color: rgba(242, 205, 195, 0.7);
+    background-color: rgba(242, 205, 195, 0.9);
     height: fit-content;
     border-radius: 2%;
     opacity: 1;
@@ -499,6 +515,10 @@ ul {
     background-position: center;
     max-width: 100%;
     overflow: hidden;
+}
+
+.form-button {
+    padding-bottom: 10%;
 }
 
 .book-button {
